Fix fotter on smaller resolutions, add animation on link

--- a/css/about-us.css
+++ b/css/about-us.css
@@ -84,4 +84,5 @@ header {
   width: 492px;
   box-shadow: 8px 8px 4px rgba(0, 0, 0, 0.25);
   border: 20px solid #ffc0cb;
+  object-fit: cover;
 }
